Compress all the pictures from the first post

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -86,7 +86,7 @@ title:	'Distributing Free Software: Herding Cats'
 <h2>Collaboration: Unity is strength</h2>
 
 <p>
-  <img src="https://farm4.staticflickr.com/3328/5755219051_31e445fdd5_o.png" alt="Collaborate" class="img-responsive center-block">
+  <img src="/images/posts/collaboration.png" alt="Collaborate" class="img-responsive center-block">
 </p>
 <p class="text-right">
   <small>
@@ -141,7 +141,7 @@ title:	'Distributing Free Software: Herding Cats'
 
 <h2>Do. Or do not. There is no try.</h2>
 <p>
-  <img src="https://farm3.staticflickr.com/2375/2797865377_eae687f4c4_o_d.jpg" alt="The Master" class="img-responsive center-block">
+  <img src="/images/posts/yoda.jpg" alt="The Master" class="img-responsive center-block">
 </p>
 <p class="text-right">
   <small>
