Less tags for the first post

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -1,7 +1,7 @@
 ---
 image: herd_of_cats.jpg
-tags: obs linux packaging
-title:	'Distributing Free Software: Herding Cats'
+tags: obs
+title: 'Distributing Free Software: Herding Cats'
 ---
 
 <p>
