Add contact vcard

--- a/index.html
+++ b/index.html
@@ -4,4 +4,5 @@ layout: default
 {% include hero.html %}
 {% include blog.html %}
 {% include hacks.html %}
+<div class="vcard">
 {% include about.html %}
