Add a image license metadata to posts

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -1,5 +1,8 @@
 ---
 image: herd_of_cats.jpg
+image_license: <a href="https://commons.wikimedia.org/wiki/File:Crowd_of_cats.jpg">Crowd of Cats</a>
+               by KUSHI licensed 
+               <a href="https://en.wikipedia.org/wiki/Public_domain">Public Domain</a>
 tags: obs
 title: 'Distributing Free Software: Herding Cats'
 ---
