Beautify the herding_cats post a bit

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -1,7 +1,7 @@
 ---
 image: herd_of_cats.jpg
 image_license: <a href="https://commons.wikimedia.org/wiki/File:Crowd_of_cats.jpg">Crowd of Cats</a>
-               by KUSHI licensed 
+               by KUSHI licensed
                <a href="https://en.wikipedia.org/wiki/Public_domain">Public Domain</a>
 tags: obs
 title: 'Distributing Free Software: Herding Cats'
@@ -50,7 +50,7 @@ title: 'Distributing Free Software: Herding Cats'
 <p>
   <img alt="A black swan" src="/images/posts/black_swan.jpg" class="img-responsive center-block">
 </p>
-<p class="text-right">
+<p class="img-license text-right">
   <small>
     <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">Some rights reserved</a>
     by <a href="http://www.geograph.org.uk/profile/3972">Colin Smith</a>
@@ -91,11 +91,9 @@ title: 'Distributing Free Software: Herding Cats'
 <p>
   <img src="/images/posts/collaboration.png" alt="Collaborate" class="img-responsive center-block">
 </p>
-<p class="text-right">
-  <small>
-    <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">Some rights reserved</a>
-    by <a href="https://secure.flickr.com/photos/opensourceway/">opensourceway</a>
-  </small>
+<p class="img-license text-right">
+  <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">Some rights reserved</a>
+  by <a href="https://secure.flickr.com/photos/opensourceway/">opensourceway</a>
 </p>
 
 <p>
@@ -146,7 +144,7 @@ title: 'Distributing Free Software: Herding Cats'
 <p>
   <img src="/images/posts/yoda.jpg" alt="The Master" class="img-responsive center-block">
 </p>
-<p class="text-right">
+<p class="img-license text-right">
   <small>
     <a href="https://creativecommons.org/licenses/by/2.0/" title="Attribution 2.0 Generic License">Some rights reserved</a>
     by <a href="https://www.flickr.com/photos/idovermani/">Dov Harrington</a>
@@ -155,124 +153,21 @@ title: 'Distributing Free Software: Herding Cats'
 
 <p>
   Enough talk, let's get practical! You have Free Software that you want to
-  make available? Here is how you can utilize the
+  make available? Here is a nice video tutorial on how you can utilize the
   <a href="https://build.opensuse.org/">Open Build Service reference server</a>
   which is freely available for developers to build packages for the most popular
   Linux distributions including openSUSE, Debian, Fedora, Ubuntu, Arch, Red Hat
   Enterprise Linux and SUSE Linux Enterprise.
 </p>
 
-<h2>Build a package</h2>
-
-<p>
-  Building packages is the most basic feature of the OBS. All you need to for
-  that is a modern web browser (we recommend
-  <a href="http://getfirefox.com">Firefox</a>) and an account on the
-  <a href="https://build.opensuse.org/">OBS reference server</a>.
-</p>
-
-<ol>
-  <li>
-    Create an account &amp; log in<br>
-    Point your browser to <a href="https://build.opensuse.org">https://build.opensuse.org</a>
-    and click the <strong><em>Sign Up</em></strong> button in the upper right
-    corner. Fill out the required information (please take note of
-    <a href="https://www.suse.com/company/policies/privacy/">SUSE's Privacy Statement</a>)
-    and create your account. Once you're account is created, log into
-    the OBS (the <strong><em>Log In</em></strong> link is also in the upper right
-    corner).
-  </li>
-  <li>
-    Create your home project<br>
-    Every user in the OBS has it's own little space for building packages, called a
-    <em>home project</em>, it always has the name of <em>home:USERNAME</em>, mine is
-    <a href="https://build.opensuse.org/project/show/home:hennevogel">home:hennevogel</a>.
-    You can navigate to your <em>home project</em> with the link in the, you've
-    guessed it, upper right corner. As this is your first log in you have to create
-    it and that's why you are greeted by a form, you can give your <em>home
-    project</em> a nice title and a description of it's content and once you're
-    done, click on <strong><em>Create Project</em></strong>. In the next step you're
-    greeted by your new shiny own little space on the OBS reference server to build
-    your packages. Hooray!
-    <img src="https://raw.githubusercontent.com/hennevogel/obs-tutorial/screenshots/02.home-project.png" alt="Your OBS home project">
-    An OBS <em>project</em> can contain zero or more OBS <em>packages</em>. For
-    now your <em>home project</em> is empty, that's boring so let's create your
-    first package!
-  </li>
-  <li>
-    Create a package<br>
-    Find the <em>Create package</em> link and click on it. Another form creeps up
-    on you. Fill in the information like this:
-    <pre>
-      <strong>Name</strong>: ctris.
-      <strong>Title</strong>: Console based Tetris clone.
-      <strong>Description</strong>: A colorized, small and flexible Tetris clone for
-      the console.
-    </pre>
-    Once you're done press <strong><em>Save changes</em></strong>. This
-    will lead you to your new package.
-    <img src="https://raw.githubusercontent.com/hennevogel/obs-tutorial/screenshots/04.empty_package.png" alt="An empty OBS package">
-    An OBS package can contain multiple <em>files</em> that are needed to build it.
-    But for now your <em>ctris package</em> is empty. Let's also change this and
-    add some files.
-  </li>
-  <li>
-    Upload files<br>
-    Typically an OBS <em>package</em> consists of two parts: The source code archive
-    and the build description. As this is a tutorial on how to use the OBS and not
-    about getting you've started with packaging we have prepared some files for you.
-    Please download the
-    <a href="http://www.hackl.dhs.org/data/download/download.php?file=ctris-0.42.tar.bz2">source code archive</a>
-    and the
-    <a href="https://raw.githubusercontent.com/hennevogel/obs-tutorial/master/ctris.spec">RPM build description</a>
-    onto your computer. Then use the <strong><em>Add file</em></strong> dialog to
-    upload them to your OBS package. In the end the <em>Source Files</em> box should
-    look like this
-    <img src="https://raw.githubusercontent.com/hennevogel/obs-tutorial/screenshots/05.filled_package.png" alt="enter image description here">
-    Now your OBS package contains everything it needs to produce RPM packages that
-    your users could install, however nothing has happened yet! Did you notice
-    the <em>Build Results</em> box next to your files? It tells you about the last
-    missing piece you need: The project this package belongs to currently has no
-    <em>build targets</em> defined. Alright, let's change that, click on the
-    <strong><em>build targets</em></strong> link in that box!
-  </li>
-  <li>
-    Add Build Targets<br>
-    <strong><em>Build Targets</em></strong> are basically the Linux distributions
-    that you want the package to be available for. Like Debian or Arch Linux. On
-    the OBS reference server you're greeted by this impressive collection of build
-    targets to choose from:
-    <img src="https://raw.githubusercontent.com/hennevogel/obs-tutorial/screenshots/06.add_build_target.png" alt="Distributions to build for in the OBS">
-    For this tutorial let's pick some RPM based distributions: openSUSE 13.2 and
-    Fedora 22. After you have added the <strong><em>build targets</em></strong>
-    you are redirected to the configuration for them, don't bother with that (yet)
-    and click straight on the <strong><em>Overview</em></strong> link in the upper
-    left corner.
-  </li>
-  <li>
-    Building<br>
-    Now the magic happens! Do you notice the <strong><em>Build Results</em></strong>
-    box? If you did everything right it will have kicked of your first OBS build
-    already. Your <em>ctris</em> package will be in the state <em>scheduled</em>,
-    <em>building</em> or <em>succeeded</em>. If you click on those links the OBS
-    will take you to log file of this build which you can inspect, follow and
-    download. But log files are not what we are here for right? We want to download
-    and play <em>ctris</em>! Let's do that, click on the <strong><em>Overview</em></strong>
-    link again.
-  </li>
-  <li>
-    Download Binary Packages<br>
-    Once all four build targets are in the state <em>succeeded</em> you can click
-    on the <strong><em>Download Package</em></strong> link which will lead you to
-    this page that includes instructions on how to download and install the ctris
-    package for Fedora and openSUSE. Let those blocks fall!
-  </li>
-</ol>
-
-<p>
-  <img src="https://raw.githubusercontent.com/hennevogel/obs-tutorial/screenshots/07.download_package.png" alt="ctris package download page">
-</p>
-
+<div style="padding: 40px 0;">
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe src="https://player.vimeo.com/video/30550722"
+          class="embed-responsive-item"
+          frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+  </iframe>
+</div>
+</div>
 <p>
   That's how you can build and distribute binary packages for a wide range of
   distributions and architectures with the Open Build Service. Enjoy!
