Prepend site urls to images in posts

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -48,7 +48,7 @@ title: 'Distributing Free Software: Herding Cats'
 <h2>Updates: Nobody is perfect.</h2>
 
 <p>
-  <img alt="A black swan" src="/images/posts/black_swan.jpg" class="img-responsive center-block">
+  <img alt="A black swan" src="{{ '/images/posts/black_swan.jpg' | prepend: site.url }}" class="img-responsive center-block">
 </p>
 <p class="img-license text-right">
   <small>
@@ -89,7 +89,7 @@ title: 'Distributing Free Software: Herding Cats'
 <h2>Collaboration: Unity is strength</h2>
 
 <p>
-  <img src="/images/posts/collaboration.png" alt="Collaborate" class="img-responsive center-block">
+  <img src="{{ '/images/posts/collaboration.png' | prepend: site.url }}" alt="Collaborate" class="img-responsive center-block">
 </p>
 <p class="img-license text-right">
   <a href="http://creativecommons.org/licenses/by-sa/2.0/" title="Attribution-ShareAlike License">Some rights reserved</a>
@@ -142,7 +142,7 @@ title: 'Distributing Free Software: Herding Cats'
 
 <h2>Do. Or do not. There is no try.</h2>
 <p>
-  <img src="/images/posts/yoda.jpg" alt="The Master" class="img-responsive center-block">
+  <img src="{{ '/images/posts/yoda.jpg' | prepend: site.url }}" alt="The Master" class="img-responsive center-block">
 </p>
 <p class="img-license text-right">
   <small>
