Some minor text fixes

--- a/_posts/2016-03-16-those_who_cant_do.html
+++ b/_posts/2016-03-16-those_who_cant_do.html
@@ -9,8 +9,8 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
 
 <p>
   I believe that one of the most important tasks for a Free Software hacker is to
-  bring into the community new people with new perspectives, backgrounds and
-  fresh ideas. That's why I try to make contributing to my own projects as
+  bring new people with new perspectives, backgrounds and
+  fresh ideas into the community. That's why I try to make contributing to my own projects as
   beginner friendly as possible, that's also the reason I frequently mentor
   people who take their first steps in developing Free Software with programs
   such as <a href="https://developers.google.com/open-source/gsoc/">Google's</a>,
@@ -18,7 +18,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
 </p>
 <p>
   Just recently I had the opportunity to implement a mentoring program
-  (hey <a href="https://101.opensuse.org/">101</a>)
+  (hey <a href="http://101.opensuse.org/">101</a>)
   for one of the Free Software communities I'm participating in
   (hey <a href="https://www.opensuse.org/">openSUSE</a>) together with a couple
   of friends (hey <a href="https://github.com/ChrisBr/">Chris</a> &amp;
@@ -30,7 +30,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
 
 <div id="more"></div>
 
-<h2>1. Put your Mentee First</h2>
+<h2>1. Put Your Mentee First</h2>
 <p>
   I believe in putting the mentees needs first. When I mentor someone
   I'll make an extra effort to place myself in their position. Empathize!
@@ -57,7 +57,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
   absolutely necessary, build a routine together.
 </p>
 
-<h2>3. Be a role model</h2>
+<h2>3. Be a Role Model</h2>
 <img src="{{ '/images/posts/superman.jpg' | prepend: site.url }}" class="img-rounded img-center" width="75%">
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/birdwatcher63/5114732315/">Superman</a>
@@ -128,7 +128,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
   that matter. You will also get the opportunity to learn  something together
   and sometimes even making a new friend for life.
 </p>
-<h2>9. Adapt, be agile</h2>
+<h2>9. Adapt, be Agile</h2>
 <img src="{{ '/images/posts/adapt.jpg' | prepend: site.url }}" class="img-rounded img-center" width="75%">
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/sea-turtle/3463746437/">Bike Tree</a>
@@ -141,7 +141,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
   attitude during your time. Respond to change, help your mentee to do
   the same. Be open, courageous, and committed.
 </p>
-<h2>10. Don't follow my advise, form your own opinion</h2>
+<h2>10. Don't Follow My Advise, Form Your Own Opinion</h2>
 <p>
   All of this is just my opinion and there are many awesome resources about
   mentoring in general and about mentoring for Free Software development
