Use the asset tags

--- a/_posts/2016-03-16-those_who_cant_do.html
+++ b/_posts/2016-03-16-those_who_cant_do.html
@@ -58,7 +58,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
 </p>
 
 <h2>3. Be a Role Model</h2>
-<img src="{{ '/images/posts/superman.jpg' | prepend: site.url }}" class="img-rounded img-center" width="75%">
+{% image 'posts/superman.jpg' alt:'A picture of a superman grafitty' class:'img-responsive img-rounded img-center' %}
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/birdwatcher63/5114732315/">Superman</a>
   by Brian Fuller licensed
@@ -129,7 +129,7 @@ title: '10 Tips for Mentoring #FreeSoftware Development'
   and sometimes even making a new friend for life.
 </p>
 <h2>9. Adapt, be Agile</h2>
-<img src="{{ '/images/posts/adapt.jpg' | prepend: site.url }}" class="img-rounded img-center" width="75%">
+{% image 'posts/adapt.jpg' alt:'A picture of a tree grwoing around a bicycle' class:'img-responsive img-rounded img-center' %}
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/sea-turtle/3463746437/">Bike Tree</a>
   by Sea Turtle licensed
