SEO. There I've said it!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+title: Full Stack Free Software Developer of the Modern Web
+description: The personal page of Henne Vogelsang
 ---
 {% include hero.html %}
 {% include blog.html %}
