Add Open Graph Data

--- a/_posts/2014-03-18-herding_cats.html
+++ b/_posts/2014-03-18-herding_cats.html
@@ -5,6 +5,7 @@ image_license: <a href="https://commons.wikimedia.org/wiki/File:Crowd_of_cats.jp
                <a href="https://en.wikipedia.org/wiki/Public_domain">Public Domain</a>
 tags: obs
 title: 'Distributing Free Software: Herding Cats'
+description: A blog post providing an introduction to the Open Biuld Service
 ---
 
 <p>
