--- a/_posts/2016-03-16-those_who_cant_do.html
+++ b/_posts/2016-03-16-those_who_cant_do.html
@@ -5,6 +5,7 @@ image_license: <a href="https://www.flickr.com/photos/idovermani/2797865377/">Or
                <a href="https://creativecommons.org/licenses/by/2.0/">CC BY 2.0</a>
 tags: community
 title: '10 Tips for Mentoring #FreeSoftware Development'
+description: What Henne Vogelsang finds important about mentoring
 ---
 
 <p>
