--- a/_posts/2016-05-04-mind_the_gap.html
+++ b/_posts/2016-05-04-mind_the_gap.html
@@ -182,8 +182,5 @@ description: A blog post about preparing a Ruby on Rails app to be runnable on P
 <p>
   All in all, I must say, it was a nice trip into the Platform as a Service
   world. Surprisingly easy to do and even more surprisingly rewarding for the
-  development work flow. What do you think? Let me know in <a
-  href="#disqus_thread">the comments</a> or on <a
-  href="https://twitter.com/henne">twitter</a>. I'm looking forward to your
-  feedback :-)
+  development work flow. What do you think?
 </p>
