--- a/_posts/2016-05-31-free_people.html
+++ b/_posts/2016-05-31-free_people.html
@@ -154,10 +154,7 @@ description: A blog post about how Free Software projects are funded by
 </p>
 <p>
   What do you think about financing Free Software projects? Are you going to do
-  something about makeing Free Software sustainable? Let me know in
-  <a href="#disqus_thread">the comments</a> or on <a href="https://twitter.com/henne">
-  twitter</a>, I'm looking forward to your feedback. Thanks for reading through
-  this.
+  something about making Free Software sustainable?
 </p>
 <p>
   Yours truly, Henne 💚
