Adopt code to jekyll-assets > 3

--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@ description: The personal page of Henne Vogelsang
       <div class="col-md-8 col-md-offset-2">
         <h1 class="text-center text-danger">HAVE YOU SEEN THIS PAGE?</h1>
         <p class="text-center small text-warning">Sorry something is wrong here, the page you're looking for can't be found</p>
-        {% image 'missing.jpg' alt:'A picture of Jimmy Hoffa' class:'img-responsive' %}
+        {% asset 'missing.jpg' alt='A picture of Jimmy Hoffa' class='img-responsive' %}
         <h1 class="text-center text-danger">CALL +404-404-404</h1>
       </div>
     </div>
