--- a/_posts/2016-03-16-those_who_cant_do.html
+++ b/_posts/2016-03-16-those_who_cant_do.html
@@ -59,7 +59,7 @@ description: What Henne Vogelsang finds important about mentoring
 </p>
 
 <h2>3. Be a Role Model</h2>
-{% image 'posts/superman.jpg' alt:'A picture of a superman grafitty' class:'img-responsive img-rounded img-center' %}
+{% asset 'posts/superman.jpg' alt='A picture of a superman grafitty' class='img-responsive img-rounded img-center' %}
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/birdwatcher63/5114732315/">Superman</a>
   by Brian Fuller licensed
@@ -130,7 +130,7 @@ description: What Henne Vogelsang finds important about mentoring
   and sometimes even making a new friend for life.
 </p>
 <h2>9. Adapt, be Agile</h2>
-{% image 'posts/adapt.jpg' alt:'A picture of a tree grwoing around a bicycle' class:'img-responsive img-rounded img-center' %}
+{% asset 'posts/adapt.jpg' alt='A picture of a tree grwoing around a bicycle' class='img-responsive img-rounded img-center' %}
 <p class="img-license text-right">
   <a href="https://www.flickr.com/photos/sea-turtle/3463746437/">Bike Tree</a>
   by Sea Turtle licensed
