--- a/_posts/2016-05-04-mind_the_gap.html
+++ b/_posts/2016-05-04-mind_the_gap.html
@@ -56,7 +56,7 @@ description: A blog post about preparing a Ruby on Rails app to be runnable on P
 </p>
 
 <div class="img">
-  {% image 'posts/osem_commercials.gif' alt:'A picture of OSEMs commercial feature' class:'img-responsive img-rounded img-center' %}
+  {% asset 'posts/osem_commercials.gif' alt='A picture of OSEMs commercial feature' class='img-responsive img-rounded img-center' %}
   <p class="img-license text-right">
     OSEM commercials by Henne Vogelsang licensed
     <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
@@ -127,7 +127,7 @@ description: A blog post about preparing a Ruby on Rails app to be runnable on P
 </p>
 
 <div class="img">
-  {% image 'posts/osem_demo.jpg' alt:'A picture of OSEMs demo data' class:'img-responsive img-rounded img-center' %}
+  {% asset 'posts/osem_demo.jpg' alt='A picture of OSEMs demo data' class='img-responsive img-rounded img-center' %}
   <p class="img-license text-right">
     OSEM demo by Henne Vogelsang licensed
     <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
@@ -157,7 +157,7 @@ description: A blog post about preparing a Ruby on Rails app to be runnable on P
 </p>
 
 <div class="img">
-  {% image 'posts/osem_heroku_pipeline.png' alt:'A picture of OSEMs pipeline on heroku' class:'img-responsive img-rounded img-center' %}
+  {% asset 'posts/osem_heroku_pipeline.png' alt='A picture of OSEMs pipeline on heroku' class='img-responsive img-rounded img-center' %}
   <p class="img-license text-right">
     OSEM heroku pipeline by Henne Vogelsang licensed
     <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
