--- a/_posts/2016-05-31-free_people.html
+++ b/_posts/2016-05-31-free_people.html
@@ -72,7 +72,7 @@ description: A blog post about how Free Software projects are funded by
 </p>
 
 <div class="img">
-  {% image 'posts/community.jpg' alt:'The openSUSE Community' class:'img-responsive img-rounded img-center' %}
+  {% asset 'posts/community.jpg' alt='The openSUSE Community' class='img-responsive img-rounded img-center' %}
   <p class="img-license text-right">
     openSUSE Community by Henne Vogelsang licensed
     <a href="http://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>
