Make the uses post less chatty...

--- a/_posts/2020-03-02-uses.html
+++ b/_posts/2020-03-02-uses.html
@@ -17,7 +17,7 @@ description: A blog post about the software and hardware I use daily.
 <h2>Operating System: <a href="https://www.opensuse.org/">openSUSE Tumbleweed</a></h2>
 <p>
   It's my Linux of choice. Why? Because it's the German Engineering version of Linux:
-  Long heritage, a certain kind of stiffness and it's super tidy. The 
+  Long heritage, a certain kind of stiffness and it's super tidy. The
   <a href="https://en.wikipedia.org/wiki/Rolling_release">rolling nature</a>
   of Tumbleweed gives me the stability <b>and</b> the velocity I need. It brings all the standard
   Linux tools through a kick ass package manager (<a href="https://doc.opensuse.org/documentation/leap/reference/html/book.opensuse.reference/cha-sw-cl.html">zypper</a>).
@@ -25,7 +25,7 @@ description: A blog post about the software and hardware I use daily.
   <i>very hard</i> to treat all software as first class citizen of the distribution.
 </p>
 <p>
-  Okay I admit, I have been involved in making this Linux distribution for decades. So take this as pure
+  Okay I admit it, I have been involved in making this Linux distribution for decades. So take this as pure
   bragging on my part. What it also means for me is that it's super easy to <i>"scratch my itch"</i> a.k.a.
   understand things, fix bugs, implement features and find the right people to poke. I can only recommend this
   to you, find a Linux home, help to maintain it and make it your own.
@@ -55,7 +55,7 @@ description: A blog post about the software and hardware I use daily.
   programs that do only <b>one</b> thing, but one thing <b>well</b>. cp, mv, echo, grep, cat, awk, sed, find,
   head, tail, curl, test, sleep and so on and so on. What a wonderful chest of lego bricks, ready for you to plug
   together your own world. Also, I literally grew up in bash. It was shell scripting that introduced
-  me to software development! And I will forever be fascinated by it, despite all the sneeze from the more
+  me to software development. And I will forever be fascinated by it, despite all the sneeze from the more
   sophisticated languages. Shell scripting is messy, raw, dangerous. Shell scripting is beautifully punk!
 </p>
 
@@ -66,17 +66,15 @@ description: A blog post about the software and hardware I use daily.
   Tabs, add-ons, session restore, firebug, sync, mobile version and now built in privacy. Mozilla has been steadily
   pushing it's flagship product forward. It might not always be the first to market, it might not always be perfect
   from the start but it is always moving forward relentlessly. That is a rare quality. We all should pray that Mozilla
-  continues this despite the google browser monopoly! BTW how the flying fuck is that monopoly OK with 65% of you?
-  Don't you remember any computing history?
+  continues this despite the google browser monopoly. BTW how the flying f**k is that monopoly OK with 65% of you?
+  Don't you remember any computing history? &lt;/rant&gt;
 </p>
 
 <h2>Source Code Management: <a href="https://git-scm.com/">git</a></h2>
 <p>
   In the meanwhile all projects I contribute to use git. I like git for being the right amount of clever CLI.
-  That opens the pager only in the right moment, corrects me if I typo or let's me extend it by just name a
-  script/binary <code>git-diff-to-deploy</code>. And I really dig the <a href="https://git-scm.com/book/en/v2/Git-Internals-Git-Objects">file based approach</a> which means
-  that I can often recover my idiot mistakes by nervously mocking around in <code>.git</code>.
-  It shows that the people maintaining this are seriously dog-fooding their own product day in and day out.
+  That opens the pager only in the right moment, corrects me if I typo or let's me extend it, just by nameing a
+  command <code>git-diff-to-deploy</code>. And I really dig the <a href="https://git-scm.com/book/en/v2/Git-Internals-Git-Objects">file based approach</a> which means that I can often recover my idiot mistakes by nervously mocking around in <code>.git</code>. It shows that the people maintaining this are seriously dog-fooding their own product day in and day out.
 </p>
 <h2>Source Code Collaboration: <a href="https://github.com">github</a></h2>
 <p>
@@ -88,9 +86,10 @@ description: A blog post about the software and hardware I use daily.
   But I really don't like them riding and emphasizing
   <a href="https://en.wikipedia.org/wiki/Network_effect">the network effect</a>. And I flat out <b>hate</b> that
   such a large piece of software in my stack is closed source.
-  Quite frankly I do not understand how anyone at Microsoft can justify to the mirror that github is not Free Software.
+  Quite frankly I do not understand how anyone at Microsoft can justify to their mirror that github is not Free Software.
   It's not like anyone will ever be able to take any business away from github.com which value is the number of people
-  using it. As you can see with me and my projects, that ship has sailed a long time ago.
+  using it. As you can see with me and my projects, that ship has sailed a long time ago. Why do you have to deny me
+  my software freedoms if I can't use them to <i>hurt</i> you in any way?
 </p>
 <p>
   I am a Ruby on Rails developer, I know a thing or two about collaborating on software. I want to send a pull-requests
@@ -141,7 +140,7 @@ description: A blog post about the software and hardware I use daily.
 <hr>
 <h2>Laptop: <a href="https://www.dell.com/en-us/work/shop/dell-laptops-and-notebooks/new-xps-13-laptop/spd/xps-13-9300-laptop">Dell XPS 13 (9380)</a></h2>
 <p>
-  I work from at least two different places during the day. My office, meeting room, home office, the train, hotel room etc.
+  I work from at least two different places during the day. My office, meeting room, home office etc.
   That's why I dig this powerful 13" laptop you can swing around with ease. It also features a nice enough keyboard,
   can be charged via USB-C (<a href="https://www.dell.com/en-in/shop/dell-hybrid-adapter-power-bank-usb-c-ph45w17-ca-45w-ac-adapter-notebook-power-bank-43wh/apd/492-bciv/pc-accessories">power bank</a> ready) and
   you can even be buy it with (the wrong) Linux preloaded! What more can you ask from hardware?
@@ -149,8 +148,7 @@ description: A blog post about the software and hardware I use daily.
 <h2>Keyboard: <a href="https://www.duckychannel.com.tw/en/Ducky-One2-Horizon-TKL">Ducky One 2 Horizon TKL</a></h2>
 <p>
   Guess if you're an old fart like me you just need something that feels a bit like a model M keyboard. But please without
-  the nicotine stained look, I really do not need to be reminded that back in the day I smoked during hacking.
-  This ducky quacks for me at the office where I plug in my laptop into a docking station.
+  the nicotine stained look. This ducky quacks for me at the office where I plug in my laptop into a docking station.
 </p>
 
 <div class="img">
