Fix link in first article

--- a/_posts/2021-03-23-activesupport.html
+++ b/_posts/2021-03-23-activesupport.html
@@ -168,5 +168,5 @@ end
 </p>
 <p>
   How, why and in what way can you contribute? Read on in the next part of this series: 
-  <a href="/blah">Measure twice, instrument once with influxdb-rails!</a>
+  <a href="/blog/influxdb-rails.html">Measure twice, instrument once with influxdb-rails!</a>
 </p>
